css/style.css
* {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

a:link {
  text-decoration: none;
}

a {
  color: rgb(226, 38, 38);
}

body {
  background-color: rgb(235, 235, 235);
}

.flexboxboi {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: top;
}

.box {
  color: rgb(226, 38, 38);
  width: 50%;
  font-family: sans-serif;
  font-size: 1.5em;
  padding: 1em;
  text-align: center;
}

.box3 {
  padding-top: 0;
  margin: 0;
  overflow-y: scroll;
  min-height: 70vh;
}

.box4 {
  padding-top: 0;
  min-height: 20vh;
}

.infoinhalt {
  color: rgb(29, 15, 15);
  width: 100%;
  height: 100%;
  background-color: rgb(222, 222, 222);
  overflow: scroll;
  font-size: 1em;
  text-align: justify;
}

table.table {
  width: 100%;
  text-align: left;
  border-collapse: collapse;
}

table.table tbody td {
  font-size: 0.8em;
}

table.table tr:nth-child(even) {
  background: rgba(29, 15, 15, 100);
  color: rgb(222, 222, 222);
}

table.centered {
  text-overflow: clip;
}

span {
  position: relative;
  font-size: 1.5em;
  font-weight: bold;
}

span::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  height: 0.2em;
  background-color: rgba(29, 15, 15, 100);
  transform-origin: center right;
  transform: scaleX(0) translateY(-50%);
  transition: transform 0.1s ease;
}

span:hover::before {
  transform-origin: center left;
  transform: scaleX(1) translateY(-50%);
}

.my-custom-button1 {
  border: none;
  background-color: rgb(29, 15, 15);
  color: rgb(226, 38, 38);
  padding: 0.4em 0.8em;
  text-align: center;
  text-decoration: none;
  font-size: 1.2em;
  animation: mycursor 0.8s infinite;
  outline-offset: -5px;
}

.my-custom-button1:active {
  background-color: rgb(222, 222, 222);
  outline-style: solid;
  outline-width: 5px;
}

.my-custom-button1:focus {
  outline-color: rgb(29, 15, 15);
  outline-style: solid;
  outline-width: 5px;
}

.my-custom-button2 {
  border: none;
  background-color: rgb(222, 222, 222);
  color: rgb(226, 38, 38);
  padding: 0.4em 0.8em;
  text-align: center;
  text-decoration: none;
  font-size: 1.2em;
  animation: mycursor 0.8s infinite;
  outline-offset: -5px;
}

.my-custom-button2:active {
  background-color: rgb(29, 15, 15);
  outline-style: solid;
  outline-width: 5px;
}

.my-custom-button2:focus {
  outline-color: rgb(222, 222, 222);
  outline-style: solid;
  outline-width: 5px;
}

@keyframes mycursor {
  0% {
    cursor: url("../img/cursor1.png"), none;
  }

  4% {
    cursor: url"../img/cursor2.png", none;
  }

  8% {
    cursor: url("../img/cursor3.png"), none;
  }

  12% {
    cursor: url("../img/cursor4.png"), none;
  }

  16% {
    cursor: url("../img/cursor5.png"), none;
  }

  20% {
    cursor: url("../img/cursor6.png"), none;
  }

  24% {
    cursor: url("../img/cursor7.png"), none;
  }

  28% {
    cursor: url("../img/cursor8.png"), none;
  }

  32% {
    cursor: url("../img/cursor9.png"), none;
  }

  36% {
    cursor: url("../img/cursor10.png"), none;
  }

  40% {
    cursor: url("../img/cursor11.png"), none;
  }

  44% {
    cursor: url("../img/cursor12.png"), none;
  }

  48% {
    cursor: url("../img/cursor13.png"), none;
  }

  52% {
    cursor: url("../img/cursor14.png"), none;
  }

  56% {
    cursor: url("../img/cursor15.png"), none;
  }

  60% {
    cursor: url("../img/cursor16.png"), none;
  }

  64% {
    cursor: url("../img/cursor17.png"), none;
  }

  68% {
    cursor: url("../img/cursor18.png"), none;
  }

  72% {
    cursor: url("../img/cursor19.png"), none;
  }

  76% {
    cursor: url("../img/cursor20.png"), none;
  }

  80% {
    cursor: url("../img/cursor21.png"), none;
  }

  84% {
    cursor: url("../img/cursor22.png"), none;
  }

  88% {
    cursor: url("../img/cursor23.png"), none;
  }

  92% {
    cursor: url("../img/cursor24.png"), none;
  }

  96% {
    cursor: url("../img/cursor25.png"), none;
  }

  100% {
    cursor: url("../img/cursor26.png"), none;
  }
}

.bg-image {
  height: 78%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  overflow: scroll;
}

.bg-image:hover {
  background-color: rgba(29, 15, 15, 100);
}

.img1 {
  background-image: url("../img/1.bmp");
}

.img2 {
  background-image: url("../img/2.bmp");
}

.rotate {
  transform: rotate(-90deg);
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}

.bg-text {
  background-color: rgb(0, 0, 0);
  /* Fallback color */
  background-color: rgba(0, 0, 0, 0.0);
  /* Black w/opacity/see-through */
  size: inherit;
  color: rgb(226, 38, 38);
  font-size: 1.2em;
  position: fixed;
  left: 2%;
  top: 40%;
  font-weight: bold;
  text-align: justify;
  text-shadow: -1px 0 rgb(235, 235, 235),
    0 1px rgb(235, 235, 235),
    1px 0 rgb(235, 235, 235),
    0 -1px rgb(235, 235, 235);
}

.displayline {
  background-color: rgba(235, 235, 235, 0.6);
  border-style: solid;
  border-width: 0.2em;
  border-left: none;
  border-right: none;
  font-family: sans-serif;
  font-style: italic;
  font-size: 2em;
  z-index: 10;
  width: 100%;
  height: 2.4em;
  position: fixed;
  white-space: nowrap;
  top: 85%;
  text-shadow: -1px 0 rgb(235, 235, 235),
    0 1px rgb(235, 235, 235),
    1px 0 rgb(235, 235, 235),
    0 -1px rgb(235, 235, 235),
    0px 0px 8px rgba(235, 235, 235, 0.7);
}

.id{
  padding-right: 10px;
}

.movingtext {
  height: 2em;
  line-height: 2em;
  white-space: nowrap;
  -webkit-animation: 10s linear 1s infinite normal move_text;
  animation: 10s linear 1s infinite normal move_text;
}

.is-hidden {
  display: none;
}

@-webkit-keyframes move_text {
  from {
    margin-left: 100%;
  }

  to {
    margin-left: 0%;
  }
}

@keyframes move_text {
  from {
    margin-left: 100%;
  }

  to {
    margin-left: 0%;
  }
}

@media (max-width: 768px) {
  body {
    margin-left: 10px;
    margin-right: 10px;
  }

  .box {
    width: 100%;
  }

  .box3 {
    min-height: 500px;
  }

  .box4 {
    min-height: 500px;
  }

  .bg-image {
    height: 60%;
    background-size: contain;
  }

  .bg-text {
    top: -200px;
    left: -42%;
    position: relative;
  }

  .infoinhalt {
    text-align: left;
  }
}

